--- a/FsProject/amp-airbus-a330-300/Packages/amp-airbus-a330-300/html_ui/Pages/VCockpit/Instruments/Airliners/A330/CDU/A330_CDU.html
+++ b/FsProject/amp-airbus-a330-300/Packages/amp-airbus-a330-300/html_ui/Pages/VCockpit/Instruments/Airliners/A330/CDU/A330_CDU.html
@@ -1,6 +1,4 @@
-﻿<!-- Despite the name, this file is from A32NX, not PMP. -->
-
-<!--
+﻿<!--
   ~ A32NX
   ~ Copyright (C) 2020-2021 FlyByWire Simulations and its contributors
   ~
@@ -32,6 +30,7 @@
 <script type="text/html" import-script="/JS/A32NX_Util.js"></script>
 <script type="text/html" import-script="/JS/dataStorage.js"></script>
 <script type="text/html" import-script="/Pages/A32NX_Utils/NXDataStore.js"></script>
+<script type="text/html" import-script="/Pages/A32NX_Utils/NXFMGCFlightPhases.js"></script>
 <script type="text/html" import-script="/Pages/A32NX_Utils/NXApi.js"></script>
 <script type="text/html" import-script="/Pages/A32NX_Utils/NXLogic.js"></script>
 <script type="text/html" import-script="/Pages/A330_Utils/NXSpeeds.js"></script>
@@ -181,5 +180,6 @@
 <script type="text/html" import-script="/Pages/A32NX_Core/A32NX_ATSU.js"></script>
 <script type="text/html" import-script="/Pages/A32NX_Core/A32NX_FuelPred.js"></script>
 <script type="text/html" import-script="/Pages/A32NX_Core/FMGC/A32NX_ConstraintManager.js"></script>
+<script type="text/html" import-script="/Pages/A32NX_Core/FMGC/A32NX_FlightPhaseManager.js"></script>
 
 <script type="text/html" import-script="/Pages/VCockpit/Instruments/Airliners/A320_Neo/CDU/A320_Neo_CDU_MainDisplay.js"></script>
